# First_dep

./: .env.template  Dockerfile  docker-compose.yaml  pyproject.toml  requirements.txt
.github/workflows/: main.yml
djangoProject/: settings.py  urls.py
mysite/: db.sqlite3
mysite/mysite/: settings.py  urls.py
mysite/shopapp/: forms.py
mysite/shopapp/migrations/: 0001_initial.py
mysite/shopapp/templates/shopapp/: products-list.html
nginx/: Dockerfile  nginx.conf
shopapp/: common.py  forms.py  models.py  urls.py  views.py
shopapp/migrations/: 0001_initial.py
templates/: base.html  shop-index.html
