[tool.poetry]
name = "djangoproject"
version = "0.1.0"
description = ""
authors = ["SergeyAbashev <xxxevgardxxx@mail.ru>"]
package-mode = false

[tool.poetry.dependencies]
python = "^3.11"
django = "^5.0.3"
django-rest-framework = "^0.1.0"
djangorestframework = "^3.14.0"
django-debug-toolbar = "^4.3.0"
django-filter = "^24.1"
gunicorn = "^21.2.0"
pillow = "^10.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
